Made little changes on the overlay and fixed a bug with the introduction images

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,9 +33,9 @@
             <img src="/img/logo.png" title="Logo" alt="Logo" class="logo">
             <hr class="split">
             <ul class="menu">
-                <li><a href="/#crypto">Crypto</a></li>
-                <li><a href="/#stock-market">Stock Market</a></li>
-                <li><a href="/#currency">Valuták</a></li>
+                <a href="/#crypto"><li>Crypto</li></a>
+                <a href="/#stock-market"><li>Stock Market</li></a>
+                <a href="/#currency"><li>Valuták</li></a>
             </ul>
             <div class="hamburger">
                 <span class="hamburger-item"></span>
