--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
             </div>
         </div>
         <nav class="navbar">
-            <img src="/img/logo.png" title="Logo" alt="Logo" class="logo">
+            <a href="/"><img src="/img/logo.png" title="Logo" alt="Logo" class="logo"></a>
             <hr class="split">
             <ul class="menu">
                 <a href="/#crypto"><li>Crypto</li></a>
@@ -87,7 +87,7 @@
                 </p>
                 <br>
                 <p style="font-weight: bold;">Próbáld ki az API-t itt!</p>
-                <button class="more-information">További információ</button>
+                <a href="/"><button class="more-information">További információ</button></a>
             </div>
         </section>
         <section class="stock-market" id="stock-market">
@@ -103,7 +103,7 @@
                 </p>
                 <br>
                 <p style="font-weight: bold;">Próbáld ki az API-t itt!</p>
-                <button class="more-information">További információ</button>
+                <a href="/"><button class="more-information">További információ</button></a>
             </div>
             <img src="/img/stock-market.png" title="Stock-market" alt="Stock-market">
         </section>
@@ -121,13 +121,13 @@
                 </p>
                 <br>
                 <p style="font-weight: bold;">Próbáld ki az API-t itt!</p>
-                <button class="more-information">További információ</button>
+                <a href="/"><button class="more-information">További információ</button></a>
             </div>
         </section>
     </main>
     <footer>
-        <span><i class="fa-solid fa-copyright" style="font-size: 1.3rem;"></i> 2024 Money Business Inc. Minden jog fentartva</span>
-        <img src="/img/logo.png" title="Logo" alt="Logo">
+        <span><i class="fa-solid fa-copyright" style="font-size: 1.3rem;"></i> 2024 Money Business Inc. Minden jog fenntartva</span>
+        <a href="/"><img src="/img/logo.png" title="Logo" alt="Logo"></a>
         <div class="social-media">
             <ul>
                 <li><i class="fa-brands fa-facebook"></i></li>
