--- a/views/index.ejs
+++ b/views/index.ejs
@@ -121,7 +121,7 @@
                 </p>
                 <br>
                 <p style="font-weight: bold;">Próbáld ki az API-t itt!</p>
-                <a href="/"><button class="more-information">További információ</button></a>
+                <a href="/currency"><button class="more-information">További információ</button></a>
             </div>
         </section>
     </main>
@@ -138,4 +138,6 @@
             </ul>
         </div>
     </footer>
+</body>
+
 </html>
