--- a/public/styles/currency.css
+++ b/public/styles/currency.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+
+
 .introduction-currency {
     display: grid;
-    grid-template-rows: repeat(2, 400px);
+    grid-template-rows: repeat(2, 280px);
     grid-template-columns: repeat(3, 30%);
     background-color: rgb(220, 248, 255);
 }
@@ -10,13 +13,15 @@
 }
 
 .introduction-currency .img-dollar {
-    grid-area: 1 / 2 / 3 / 3;
+    grid-area: 2 / 2 / 3 / 3;
     place-self: center;
+    margin-bottom: 20px;
 }
 
 .introduction-currency .img-recycle-dollar {
-    grid-area: 1 / 3 / 3 / 4;
+    grid-area: 2 / 3 / 3 / 4;
     place-self: center;
+    margin-bottom: 20px;
 }
 
 .introduction-currency-text {
@@ -31,23 +36,59 @@
 .input-result {
     display: flex;
     justify-content: space-around;
+    align-items: center;
+}
+
+.input-result * {
+    font-size: 1.3rem;
+    border-radius: 12px;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+
+.input-result *:not(:last-child) {
+    margin-bottom: 10px;
 }
 
 form {
     display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
 
 }
 
-form hr {
-    border: 5px solid black;
-    width: 10px;
-    border-radius: 20px;
+form button {
+    font-family: "Josefin Sans";
+    cursor: pointer;
+}
+
+.exception {
+    display: none;
+}
+
+.exception-div {
+    display: flex;
+    flex-direction: column;
+}
+
+.exception-div *:not(:last-child){
+    margin-bottom: 20px;
+}
+
+::placeholder {
+    font-family: "Josefin Sans";
+    overflow: hidden;
+}
+  
+::-ms-input-placeholder {
+    font-family: "Josefin Sans";
 }
 
 
 @media (max-width: 1024px) {
     .introduction-currency {
         grid-template-rows: repeat(3, 250px);
+        grid-template-columns: repeat(5, 32%);
     }
 
     .introduction-currency .img-coin {
@@ -67,13 +108,17 @@ form hr {
 
     .introduction-currency-text {
         grid-area: 1 / 1 / 2 / 4;
-        margin-left: 100px;
+        margin-left: 50px;
+    }
+
+    .input-result {
+        flex-direction: column;
     }
 }
 
 @media (max-width: 768px) {
     .introduction-currency {
-        grid-template-rows: repeat(2, 210px);
+        grid-template-rows: repeat(2, 220px);
     }
 
     .introduction-currency .img-coin,
@@ -91,6 +136,18 @@ form hr {
 
 @media (max-width: 425px) {
     .introduction-currency {
-        grid-template-rows: repeat(2, 320px);
+        grid-template-rows: repeat(2, 275px);
+    }
+}
+
+@media (max-width: 320px) {
+    .introduction-currency {
+        grid-template-rows: repeat(2, 330px);
+    }
+
+
+
+    form *, .exception-div * {
+        padding: 4px;
     }
 }
