--- a/views/currency.ejs
+++ b/views/currency.ejs
@@ -88,6 +88,7 @@
                             <input type="number" placeholder="Mennyit akarsz átváltani?">
                         </div>
                         <button id="query">Lekérdezés</button>
+                        <button id="clear">Törlés</button>
                     </div>
                 </div>
             </div>
