--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -85,6 +85,7 @@
                         <label for="stock">Ha több ticker jelet akarsz megadni, vesszővel válaszd el!</label>
                         <input type="text" name="stock" id="stock" placeholder="A cég(ek) ticker jelei">
                         <button>Lekérdezés</button>
+                        <button id="clear">Törlés</button>
                     </div>
                 </div>
             </div>
