Fully create stock website

--- a/public/styles/currency.css
+++ b/public/styles/currency.css
@@ -64,11 +64,7 @@
     cursor: pointer;
 }
 
-.form #clear {
-    display: none;
-}
-
-.checkbox-click {
+.form .clear, .checkbox-click {
     display: none;
 }
 
