--- a/views/currency.ejs
+++ b/views/currency.ejs
@@ -88,8 +88,8 @@
                             <input type="text" placeholder="A másik ország valutakódja">
                             <input type="number" placeholder="Mennyit akarsz átváltani?">
                         </div>
-                        <button id="query">Lekérdezés</button>
-                        <button id="clear">Törlés</button>
+                        <button>Lekérdezés</button>
+                        <button id="clear" class="hide">Törlés</button>
                     </div>
                 </div>
             </div>
