--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -82,10 +82,10 @@
             <div class="input-result">
                 <div class="inputs">
                     <div class="form">
-                        <label for="stock">Ha több ticker jelet akarsz megadni, vesszővel válaszd el!</label>
+                        <label for="stock">Ha több<a href="https://stockanalysis.com/stocks/" style="color: black; text-decoration: underline;">ticker jelet</a> akarsz megadni, vesszővel válaszd el!</label>
                         <input type="text" name="stock" id="stock" placeholder="A cég(ek) ticker jelei">
                         <button>Lekérdezés</button>
-                        <button id="clear">Törlés</button>
+                        <button id="clear" class="hide">Törlés</button>
                     </div>
                 </div>
             </div>
