Made the crypto website fully working and finished the project

--- a/views/crypto.ejs
+++ b/views/crypto.ejs
@@ -55,47 +55,46 @@
     <main>
         <section class="introduction-currency">
             <div class="img-coin">
-                <img src="/img/currency/coin.png" title="Currency" alt="Currency">
+                <img src="/img/crypto/crypto1.png" title="Currency" alt="Currency">
             </div>
             <div class="img-dollar">
-                <img src="/img/currency/dollar.png" title="Currency" alt="Currency">
+                <img src="/img/crypto/crypto2.png" title="Currency" alt="Currency">
             </div>
             <div class="img-recycle-dollar">
-                <img src="/img/currency/recycle-dollar.png" title="Currency" alt="Currency">
+                <img src="/img/crypto/crypto3.png" title="Currency" alt="Currency">
             </div>
             <div class="introduction-currency-text">
-                <p class="big-text">Valuták, valutaváltás</p>
-                <p>Az árfolyamok folyamatosan változnak a globális pénzügyi piacokon, és ezeknek az információknak a
-                    követése létfontosságú lehet az üzleti és személyes döntések meghozatalához. A Money Business
-                    API-jának segítségével gyorsan és könnyedén hozzáférhetsz a legfrissebb valutaárfolyamokhoz. Legyen
-                    szó dollárról, euróról vagy más fontos valutákról, nálunk megtalálod a szükséges információkat.
-                    Csatlakozz hozzánk ma, és fedezd fel, hogyan segíthetünk a pénzügyi döntések meghozatalában!
+                <p class="big-text">Kriptovaluta</p>
+                <p>
+                    Kriptovaluták digitális eszközök, melyek decentralizált rendszereken alapulnak, például a blockchain
+                    technológián. Ezeket általában pénzügyi tranzakciókhoz használják, de más célokra is alkalmazzák. A
+                    Bitcoin az egyik legismertebb példa, de számos más kriptovaluta létezik, mint az Ethereum vagy a
+                    Litecoin. A kriptovaluták decentralizáltak és anonim tranzakciókat tesznek lehetővé, és az elmúlt
+                    években jelentős figyelmet kaptak a pénzügyi és technológiai szektorokban.
                 </p>
             </div>
         </section>
         <section class="exchange">
-            <p class="big-text" style="margin: 0; text-align: center; padding-top: 15px; margin-bottom: 10px;">Valuta API</p>
+            <p class="big-text" style="margin: 0; text-align: center; padding-top: 15px; margin-bottom: 10px;">Crypto
+                API</p>
             <div class="input-result">
                 <div class="inputs">
                     <div class="form">
-                        <input type="text" placeholder="Az ország valutakódja" id="exchange-code">
-                        <div>
-                            <input type="checkbox" name="checkbox" id="checkbox">
-                            <label for="checkbox">Valutaváltás opció igénybevétele</label>
-                        </div>
-                        <div class="checkbox-click" id="checkboxClickDiv">
-                            <input type="text" placeholder="A másik ország valutakódja">
-                            <input type="number" placeholder="Mennyit akarsz átváltani?">
-                        </div>
-                        <button id="query">Lekérdezés</button>
-                        <button id="clear">Törlés</button>
+                        <label for="stock">Ha több<a href="https://coinlayer.com/symbols"
+                                style="color: black; text-decoration: underline;">kripto jelet</a>akarsz megadni,
+                            vesszővel válaszd el!</label>
+                        <input type="text" placeholder="A kriptovaluta rövidítése" id="crypto-symbol">
+                        <button>Lekérdezés</button>
+                        <button id="clear" class="hide">Törlés</button>
+                        <input type="text" placeholder="Keresés" name="search" id="search" class="hide">
                     </div>
                 </div>
             </div>
         </section>
     </main>
     <footer>
-        <span><i class="fa-solid fa-copyright" style="font-size: 1.3rem;"></i> 2024 Money Business Inc. Minden jog fenntartva</span>
+        <span><i class="fa-solid fa-copyright" style="font-size: 1.3rem;"></i> 2024 Money Business Inc. Minden jog
+            fenntartva</span>
         <a href="/"><img src="/img/logo.png" title="Logo" alt="Logo"></a>
         <div class="social-media">
             <ul>
