--- a/views/currency.ejs
+++ b/views/currency.ejs
@@ -90,6 +90,7 @@
                         </div>
                         <button>Lekérdezés</button>
                         <button id="clear" class="hide">Törlés</button>
+                        <input type="text" placeholder="Keresés" name="search" id="search" class="hide">
                     </div>
                 </div>
             </div>
