--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -78,14 +78,18 @@
             </div>
         </section>
         <section class="stock-query">
-            <p class="big-text" style="margin: 0; text-align: center; padding-top: 15px; margin-bottom: 10px;">Stock API</p>
+            <p class="big-text" style="margin: 0; text-align: center; padding-top: 15px; margin-bottom: 10px;">Stock API
+            </p>
             <div class="input-result">
                 <div class="inputs">
                     <div class="form">
-                        <label for="stock">Ha több<a href="https://stockanalysis.com/stocks/" style="color: black; text-decoration: underline;">ticker jelet</a> akarsz megadni, vesszővel válaszd el!</label>
+                        <label for="stock">Ha több<a href="https://stockanalysis.com/stocks/"
+                                style="color: black; text-decoration: underline;">ticker jelet</a>akarsz megadni,
+                            vesszővel válaszd el!</label>
                         <input type="text" name="stock" id="stock" placeholder="A cég(ek) ticker jelei">
                         <button>Lekérdezés</button>
                         <button id="clear" class="hide">Törlés</button>
+                        <input type="text" placeholder="Keresés" name="search" id="search" class="hide">
                     </div>
                 </div>
             </div>
